--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.15"
   }
 }
