--- a/client/package.json
+++ b/client/package.json
@@ -2,10 +2,14 @@
   "name": "sticky-notes",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3030/",
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
